fixing .gitignore and run.sh command to handle monthly_vendors script

--- a/localline/.gitignore
+++ b/localline/.gitignore
@@ -4,3 +4,4 @@ data/dairy.xlsx
 data/frozen.xlsx
 data/order_data_fail_DEVELOPMENT.csv 
 data/order_data_success_DEVELOPMENT.csv 
+!data/products_*.xlsx
